Added alternate versions of tracks
