# app/serializers/api/v1/track_serializer.rb
@@ -1,6 +1,8 @@
 class Api::V1::TrackSerializer < BaseSerializer
-  attributes :id, :title, :file, :status, :public_domain, :created_at, :lyrics, :explicit, :composer, :description,
+  attributes :id, :title, :file, :status, :public_domain, :parent_track_id, :created_at, :lyrics, :explicit, :composer, :description,
              :language, :instrumental, :key, :bpm, :admin_note, :filters, :publishers, :artists_collaborators
+
+  has_many :alternate_versions, serializer: Api::V1::TrackSerializer
 
   def file
     object.file.presence && UrlHelpers.rails_blob_url(object.file)
