# swagger/v1/swagger.yaml
@@ -3091,6 +3091,8 @@ paths:
                       type: string
                     file:
                       type: string
+                    parent_track_id:
+                      type: integer
                     status:
                       type: string
                     public_domain:
@@ -3121,6 +3123,9 @@ paths:
         type: string
         required: true
       - name: title
+        in: formData
+        type: string
+      - name: parent_track_id
         in: formData
         type: string
       - name: public_domain
@@ -3159,6 +3164,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -3194,6 +3201,9 @@ paths:
         type: string
         required: true
       - name: title
+        in: formData
+        type: string
+      - name: parent_track_id
         in: formData
         type: string
       - name: public_domain
@@ -3232,6 +3242,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -3280,6 +3292,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -3330,6 +3344,8 @@ paths:
                   type: string
                 file:
                   type: string
+                parent_track_id:
+                  type: integer
                 status:
                   type: string
                 public_domain:
@@ -4158,6 +4174,8 @@ paths:
                       type: string
                     file:
                       type: string
+                    parent_track_id:
+                      type: integer
                     status:
                       type: string
                     public_domain:
@@ -4185,6 +4203,9 @@ paths:
         type: string
         required: true
       - name: title
+        in: formData
+        type: string
+      - name: parent_track_id
         in: formData
         type: string
       - name: public_domain
@@ -4223,6 +4244,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -4255,6 +4278,9 @@ paths:
         type: string
         required: true
       - name: title
+        in: formData
+        type: string
+      - name: parent_track_id
         in: formData
         type: string
       - name: public_domain
@@ -4293,6 +4319,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -4338,6 +4366,8 @@ paths:
                 type: string
               file:
                 type: string
+              parent_track_id:
+                type: integer
               status:
                 type: string
               public_domain:
@@ -4385,6 +4415,8 @@ paths:
                   type: string
                 file:
                   type: string
+                parent_track_id:
+                  type: integer
                 status:
                   type: string
                 public_domain:
